-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 3.4.0-beta1
-
None
-
Ubuntu 14.04, 64 Bit
- Host Qt Creator from master on revision: 6fd0d4ed339fe656bc68d7b31ba9d8e63955b12a,
built with installed Qt 5.4.0. - Submodule qbs: db46956af0862a6595f068df553004e53df5f5d6 src/shared/qbs (v1.3.3-218-gdb46956)
- Checkout ba20d638cf8be0b1b68c2664b27df779b891e2a3 (" C++: Add cplusplus tools to qtcreator.qbs") in the qtcreator repository.
- Open qtcreator.qbs
- Open the file src/tools/cplusplus-shared/CPlusPlusToolUsingCustomUtils.qbs
- Replace "QtcProject" with "CPlusPlusToolUsingCustomUtils.qbs" and it will crash, either immediately or after some seconds of freeze.
See attached gdb.txt.
For Gerrit Dashboard: QTCREATORBUG-13906 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
105536,2 | qmljs: do not look up types in the prototypes | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |